# bingham_mac

./: .gitignore  CMakeLists.txt  README.md  analytics.cpp  analytics.h  cavity.cpp  cavity_gmg.cpp  discr.h  gmg.h  gmg_poisson.h  gmg_stokes.h  grid.h  main.cpp  mat2.h  poisson_gmg.cpp  vtk.h
doc/: dofs1.fig
